--- a/senran.html
+++ b/senran.html
@@ -4,6 +4,7 @@
  <script src="js/jquery-3.3.1.min.js"></script>
  <script src="js/bootstrap.bundle.js"></script>
  <script src="js/lightbox.js"></script>
+ <link rel="stylesheet" href="css/lightbox.css">
  <title>シノマスキャラ</title>
 </head>
 
@@ -22,7 +23,7 @@
     </tr>
     <tr>
       <td>
-      <a href="/home/satokoichiro/ダウンロード/senran/katuragi.png" data-lightbox="image-1">葛城</a>
+      <a href="/home/satokoichiro/playground/senran/katuragi.png" data-lightbox="image-1">葛城</a>
       </td>
       <td>国立半蔵学院</td>
       <td>11月5日</td>
@@ -31,7 +32,7 @@
     </tr>
     <tr>
       <td>
-      <a href="/home/satokoichiro/ダウンロード/senran/yomi.png"  data-lightbox="image-1">詠</a>
+      <a href="/home/satokoichiro/playground/senran/yomi.png"  data-lightbox="image-1">詠</a>
       </td>
       <td>焔紅蓮隊</td>
       <td>2月10日</td>
@@ -40,7 +41,7 @@
     </tr>
     <tr>
       <td>
-      <a href="/home/satokoichiro/ダウンロード/senran/haruka.png" data-lightbox="image-1">春花</a>
+      <a href="/home/satokoichiro/playground/senran/haruka.png" data-lightbox="image-1">春花</a>
       </td>
       <td>焔紅蓮隊</td>
       <td>7月20日</td>
@@ -49,7 +50,7 @@
     </tr>
     <tr>
       <td>
-      <a href="/home/satokoichiro/ダウンロード/senran/murakumo.png" data-lightbox="image-1">叢</a>
+      <a href="/home/satokoichiro/playground/senran/murakumo.png" data-lightbox="image-1">叢</a>
       </td>
       <td>死塾月閃女学館</td>
       <td>10月8日</td>
@@ -58,7 +59,7 @@
     </tr>
     <tr>
       <td>
-      <a href="/home/satokoichiro/ダウンロード/senran/siki.png" data-lightbox="image-1">四季</a>
+      <a href="/home/satokoichiro/playground/senran/siki.png" data-lightbox="image-1">四季</a>
       </td>
       <td>死塾月閃女学館</td>
       <td>3月25日</td>
@@ -67,7 +68,7 @@
     </tr>
     <tr>
       <td>
-      <a href="/home/satokoichiro/ダウンロード/senran/murasaki.png" data-lightbox="image-1">紫</a>
+      <a href="/home/satokoichiro/playground/senran/murasaki.png" data-lightbox="image-1">紫</a>
       </td>
       <td>秘立蛇女子学園</td>
       <td>10月26日</td>
@@ -76,7 +77,7 @@
     </tr>
     <tr>
       <td>
-      <a href="/home/satokoichiro/ダウンロード/senran/ryoubi.png" data-lightbox="image-1">両備</a>
+      <a href="/home/satokoichiro/playground/senran/ryoubi.png" data-lightbox="image-1">両備</a>
       </td>
       <td>秘立蛇女子学園</td>
       <td>1月19日</td>
@@ -85,7 +86,7 @@
     </tr>
     <tr>
       <td>
-      <a href="/home/satokoichiro/ダウンロード/senran/ryouna.png" data-lightbox="image-1">両奈</a>
+      <a href="/home/satokoichiro/playground/senran/ryouna.png" data-lightbox="image-1">両奈</a>
       </td>
       <td>秘立蛇女子学園</td>
       <td>1月19日</td>
@@ -94,7 +95,7 @@
     </tr>
     <tr>
       <td>
-      <a href="/home/satokoichiro/ダウンロード/senran/rin.png" data-lightbox="image-1">凛</a>
+      <a href="/home/satokoichiro/playground/senran/rin.png" data-lightbox="image-1">凛</a>
       </td>
       <td>秘立蛇女子学園</td>
       <td>9月30日</td>
@@ -103,7 +104,7 @@
     </tr>
     <tr>
       <td>
-      <a href="/home/satokoichiro/ダウンロード/senran/kagura.png" data-lightbox="image-1">神楽</a>
+      <a href="/home/satokoichiro/playground/senran/kagura.png" data-lightbox="image-1">神楽</a>
       </td>
       <td>巫神楽</td>
       <td>不明</td>
@@ -112,10 +113,13 @@
     </tr>
     <tr>
       <td>
-      <a href="/home/satokoichiro/ダウンロード/senran/hanabi.png" data-lightbox="image-1">華毘</a>
+      <a href="/home/satokoichiro/playground/senran/hanabi.png" data-lightbox="image-1">華毘</a>
       </td>
       <td>巫神楽</td>
       <td>10月1</td>
       <td>163cm</td>
       <td>B<font color="red">96</font> W57 H84</td>
-    </t/html
+    </tr>
+  </tbody>
+</table>
+</html>
